[tool.poetry]
name = "earnings"
version = "0.0.1"
description = "A bot to watch Stocktwits for earnings data."
authors = ["Major Hayden <fmajor@mhtx.net>"]
repository = "https://github.com/major/earnings"
documentation = "https://major.github.io/earnings/"
readme = "README.md"
packages = [{ include = "earnings" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
discord-webhook = "^1.3.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
deptry = "^0.12.0"
mypy = "^1.8.0"
pre-commit = "^3.6.2"
tox = "^4.13.0"
pytest-sugar = "^1.0.0"
pytest-randomly = "^3.15.0"
pytest-clarity = "^1.0.1"
pytest-vcr = "^1.0.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["earnings"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
  # flake8-2020
  "YTT",
  # flake8-bandit
  "S",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-comprehensions
  "C4",
  # flake8-debugger
  "T10",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  "W",
  # pyflakes
  "F",
  # pygrep-hooks
  "PGH",
  # pyupgrade
  "UP",
  # ruff
  "RUF",
  # tryceratops
  "TRY",
]
ignore = [
  # LineTooLong
  "E501",
  # DoNotAssignLambda
  "E731",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["earnings"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
